--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.2</version>
+        <version>3.4.3</version>
         <relativePath/>
         <!--  lookup parent from repository  -->
     </parent>
     <groupId>com.Gen2Play</groupId>
     <artifactId>VideoService</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>VideoService</name>
     <description>Video service for Gen2Play</description>
     <url/>
@@ -131,6 +130,22 @@
             <artifactId>google-cloud-video-intelligence</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <!-- spring-cloud-starter-config -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.2.0</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
